cambios en clase y añadir carpeta de examen

--- a/01-clases/app/src/main/res/layout/activity_main.xml
+++ b/01-clases/app/src/main/res/layout/activity_main.xml
@@ -69,9 +69,10 @@
         android:id="@+id/btn_sqlite"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="68dp"
+        android:layout_marginTop="64dp"
         android:text="Sqlite"
         app:layout_constraintEnd_toEndOf="@+id/textView"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/textView"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
@@ -95,5 +96,16 @@
         app:layout_constraintStart_toEndOf="@+id/btn_ir_intent_explicito"
         app:layout_constraintTop_toTopOf="@+id/btn_ir_intent_explicito"
         app:layout_constraintVertical_bias="0.0" />
+
+    <Button
+        android:id="@+id/btn_intent_firebase_ui"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="52dp"
+        android:text="F. Auth"
+        app:layout_constraintEnd_toEndOf="@+id/btn_recycler_view"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/btn_recycler_view"
+        app:layout_constraintTop_toBottomOf="@+id/btn_recycler_view" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
