--- a/02-Deberes/Examen 2B/app/src/main/res/menu/menu.xml
+++ b/02-Deberes/Examen 2B/app/src/main/res/menu/menu.xml
@@ -11,4 +11,7 @@
     <item
         android:id="@+id/mi_canciones"
         android:title="Canciones" />
+    <item
+        android:id="@+id/mi_ubicaacion"
+        android:title="Ubicacion" />
 </menu>
